--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 # Auto detect text files and perform LF normalization
-* text=auto
+*.java linguist-detectable=true
+*.js linguist-detectable=true
+*.sql linguist-detectable=true
+*.html linguist-detectable=true
+*.css linguist-detectable=true
+
