--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,5 @@
-# Auto detect text files and perform LF normalization
 *.java linguist-detectable=true
-*.js linguist-detectable=true
-*.sql linguist-detectable=true
-*.html linguist-detectable=true
-*.css linguist-detectable=true
+*.js linguist-detectable=false
+*.html linguist-detectable=false
+*.xml linguist-detectable=false
 
